tests/ui/c-variadic/fn-item-diagnostic-issue-69232.stderr
error[E0617]: can't pass a function item to a variadic function
  --> $DIR/fn-item-diagnostic-issue-69232.rs:12:21
   |
LL |     unsafe { foo(1, test) };
   |                     ^^^^
   |
   = help: a function item is zero-sized and needs to be cast into a function pointer to be used in FFI
   = note: for more information on function items, visit https://doc.rust-lang.org/reference/types/function-item.html
help: use a function pointer instead
   |
LL |     unsafe { foo(1, test as fn() -> u8) };
   |                          +++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0617`.
